# gym-app-backend

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
